cmake_minimum_required(VERSION 3.22.1)
project(MAC_PLUS_PLUS_release)
add_definitions("-Wall -g")
set(CMAKE_CXX_STANDARD 14)
find_package(PCL REQUIRED)
find_package(igraph 0.10.6 REQUIRED)
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(MAC desc_dec.cpp funcs.cpp PCR.cpp registration.cpp visualization.cpp Eva.h)
add_executable(Boot main.cpp)
target_link_libraries(MAC ${PCL_LIBRARIES} igraph::igraph)